--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,7 +58,7 @@
             android:layout_height="30dp"
             android:layout_gravity="center_vertical"
             android:scaleType="centerInside"
-            android:src="@drawable/fb"
+            android:src="@drawable/icon_fb"
 
             />
 
@@ -90,7 +90,7 @@
             android:layout_height="30dp"
             android:layout_gravity="center_vertical"
             android:scaleType="centerInside"
-            android:src="@drawable/ig"
+            android:src="@drawable/icon_ig"
 
             />
 
@@ -122,7 +122,7 @@
             android:layout_height="30dp"
             android:layout_gravity="center_vertical"
             android:scaleType="centerInside"
-            android:src="@drawable/line"
+            android:src="@drawable/icon_line"
 
             />
 
